# geck0Platform

./: .gitignore  GECK0VERSE_BUILD_ORDER.md  GECK0VERSE_CORE_PLATFORM.md  GECK0VERSE_MASTER_ARCHITECTURE.md  GECK0_KEYBOARD_COMMAND_PALETTE.md  GECK0_SEARCH_ARCHITECTURE.md  GECK0_SHELL_AND_PLUGINS.md
config/: .env.example  (+3 more)
geck0Verse/: .env.example  .geck0backupignore  .gitignore  CHANGELOG.md  Dockerfile  INSTALL.md  MANIFEST.json  Makefile  README.md  VALIDATION_REPORT.md  docker-compose.security.yml  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  rollback.sh  validate.sh
geck0Verse/android/Crumble/: README.md  bootstrap-wrapper.sh  settings.gradle.kts
geck0Verse/blackgeck0/: README.md
geck0Verse/blackgeck0/geck0sentinel/: loki.yml
geck0Verse/blackgeck0/geck0trap/: opencanary.conf
geck0Verse/blackgeck0/geck0watch/: suricata.yaml
geck0Verse/clients/: README.md  crumblectl.py  geck0-remote  install-remote-client.sh
geck0Verse/config/: intents.yaml  layers.yaml  projects.yaml  schedules.yaml
geck0Verse/dashboard/: app.js  index.html  nginx.conf  styles.css
geck0Verse/docs/: API_SOURCES.md  ARCHITECTURE.md  BACKUP.md  CONNECTORS.md  CRUMBLE_MEMORY.md  SECURITY.md  SPIN_OFF_GUIDE.md
geck0Verse/scripts/: healthcheck.sh  refresh-now.sh  show-token.sh  start.sh  status.sh
geck0Verse/services/: domain_store.py
geck0Verse/shared/: audit.py  auth.py  http.py  intents.py  models.py  registry.py  settings.py  storage.py  web.py
geck0Verse/tests/: test_breadcrumbs.py  test_intents.py  test_scheduler.py  test_security.py  test_services.py
(+301 files in other folders)
