[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geck0verse-control-plane"
version = "2.0.0"
description = "Integrated Geck0verse control plane and domain services"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.128.2",
  "uvicorn[standard]>=0.35,<0.36",
  "pydantic>=2.13,<3",
  "httpx>=0.28,<0.29",
  "PyYAML>=6.0,<7",
  "SQLAlchemy>=2.0,<3",
  "psycopg[binary]>=3.2,<4",
  "python-multipart>=0.0.20,<1",
  "cryptography>=46,<47",
  "jinja2>=3.1,<4",
  "reportlab>=4.2,<5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "services*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
